Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -15,35 +15,35 @@ html {
 .light-green {
   background-color: rgba(255, 255, 255, .5);
 }
- .w {
-   min-width: 600px;
- }
+
+.width {
+  min-width: 600px;
+}
 
 hr {
   border-top: 1px solid #d8cb2f;
 }
 
- .p {
-   position: absolute;
-   bottom: 2em;
-   right: 0;
- }
+.p {
+  position: absolute;
+  bottom: 2em;
+  right: 0;
+}
 
- @media only screen and (min-width: 38em) {
+@media only screen and (min-width: 38em) {
+
+  .position {
+    position: absolute;
+    bottom: 0;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
 
   .p {
-     position: absolute;
-     bottom: 0;
-   }
+    position: absolute;
+    bottom: 15em;
+  }
 
- }
-
-
- @media only screen and (min-width: 60em) {
-
-  .p {
-     position: absolute;
-     bottom: 15em;
-   }
-
- }
+}
